..F....... [ZBX-7250] made gettext an optional feature for the frontend (Pavels)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, Italian, Japanese, Russian, Slovak, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)

Bug fixes:
...G...... [ZBX-7479] fixed remote command execution from Zabbix server if flexible user parameters are configured; thanks to Recurity Labs Team for the report (Sasha)
....I..... [ZBX-7461] fixed compilation on kFreeBSD and other operating systems which are not explicitly supported (asaveljevs)
....I..... [ZBX-7339] fixed item prototypes of OpenBSD and FreeBSD templates (igors)
.......PS. [ZBX-7332] properly restore the original memory chunk after shared memory realloc fails, otherwise it could trigger a crash when syncing history at exit (wiper)
..F....... [ZBX-7373] improved performance of pages that use latest history values; thanks to Kenneth Palmertree and Maksim Tkachenko (Pavels)
..F....... [ZBX-7447] fixed regex configuration form not being displayed in French and Italian languages (Pavels)
...G...... [ZBX-7444] fixed agent crash on HP-UX when processing proc.num[] item (asaveljevs)
..F....... [ZBX-4063] fixed data selecting for graphs (Eduard)
..F....... [ZBX-7391] fixed items belonging to multiple applications being displayed only under the first one in the latest data page (Pavels)
..F....... [ZBX-7347] fixed custom step duration max size in action configuration (Eduard)
..F....... [ZBX-7336] fixed "Database type" selection in setup step 3, improved SQLite3 check and removed storing setup supported databases in cookies (Ivo)
..F....... [ZBX-7340] fixed incorrect error messages when imported objects reference unexisting objects (Pavels)
A.F....... [ZBX-7445] fixed frontend redundant call of history (Eduard)
..F....... [ZBX-7277] made item selection helper translatable (Ivo)